# cargo-mobile2-bevy-example

./: .gitignore  Cargo.toml  README.md  mobile.toml
src/: lib.rs
